freemed project changelog

* Tue Dec 12 2000 rufustfirefly
  - moved payment_record.php over to using the wizard class
  - fixed display problems in payment_record ledger
  - added konqueror to the BROWSERS list
  - added Fred Forester to the CREDITS list
  - moved roomequip.php3 -> roomequip.php
  - moved tos.php3 -> type_of_service.php
  - procedure.php:
    - fixed back from delete action / fixed delete action
    - fixed stupid break from yesterday
    - cleaned up output ... centering, etc

* Mon Dec 11 2000 rufustfirefly
  - increased version number to 0.2.0-20001211 (CVS version)
  - moved in gettext and bcmath module detection into global.var.inc to 
    stem the run on list questions 
  - commited procedure.php3 with wizard code. due to recompiling PHP on my
    box without bcmath support by mistake, can't check it for problems.
  - moved procedure.php3 -> procedure.php
  - moved manage_bills.php3 -> manage_bills.php
  - moved generate_fixed_forms.php3 -> generate_fixed_forms.php
  - moved billing_functions.php3 -> billing_functions.php
  - moved redirect.php3 -> redirect.php
  - moved room.php3 -> room.php
  - moving to CVS Id tag for new files ... also taking out code by: line
    unless other than jeff
  - moved progress_notes.php3 -> progress_notes.php
  - moved payment_record.php3 -> payment_record.php
  - moved logout.php3 -> logout.php

* Wed Dec 6  2000 fforest
  - billing_functions : new menu item to generate patient invoices
  - generate_fixed_forms : when doing the join on payrec and procrec we inadvertantly selected 
    procedures that where already marked as billed. 
    procamtallowed now considered in calculating total charges if it's not zero else use the original procedure charge.
    added new actions of invoice and geninvoice to selected all procedures/payments transferred to patient. this is the start
    of patient invoice billing.